# vittorioromeo.info

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cer  doit.sh  fnreF_notes.txt  run_webserver.sh  run_webserver_windows.sh  upload_scp.sh
content/: _menu.json
content/_pages/index/: _page.json
content/_pages/portfolio/: _page.json
emcpps/: emcpps.html
extra/cpp17_curry/: cf2  curry.cpp  curry_segfault.cpp  fwd_capture.hpp  is_valid.hpp
extra/example_library/: test.sh
extra/in_place_expr_validity/: 0_cpp11.cpp  1_cpp14.cpp  2_cpp17.cpp  2_hana.cpp  3_whatever.cpp  999_hana.cpp  cf2  cf27  cf2c  cpp17_bindable.cpp  cpp17_reversed.cpp  vv_camomilla.sh
extra/passing_functions_to_functions/: cf2  function_view.hpp  plot.py  res_captureful1.md  res_captureful2.md  res_captureful3.md  res_captureful4.md  res_captureful5.md  res_captureful5_nonvolatile.md  res_captureless.md  test_captureful1.cpp  test_captureful2.cpp  test_captureful3.cpp  test_captureful4.cpp  test_captureful5.cpp  test_captureless.cpp  todo.cpp
extra/recursive_variant_arity_deduction/: any_type.hpp  cf2  testrecvis2.cpp
extra/repeat/: repeat.cpp
extra/visiting_recursive_variants/: 0_traditional.cpp  1_lambda.cpp  1_traditional_recursive_visitation.cpp  99_notworking  detected_arity.cpp  gcc7_segfault.cpp  test_gcc7_stdvariant.cpp  testrecvis.cpp  testrecvis2.cpp  testrecvis3.cpp  tradtest.cpp  variant_aliases.hpp
extra/visiting_variants/: 0_traditional_visitation.cpp  1_traditional_recursive_visitation.cpp  2_lambda_visitation.cpp  3_lambda_recursive_visitation.cpp  cf2  libc++_inconsistency.cpp  testrecvis.cpp  variant_aliases.hpp
extra/zeroalloc_continuations/: 0_continuations.cpp  0_continuations.cpp.s  0strip.s  1_continuations.cpp  1_continuations.cpp.s  1strip.s  2_continuations.cpp  2_continuations.cpp.s  2strip.s  3_continuations.cpp  3_continuations.cpp.s  3strip.s  4_continuations.cpp  4_continuations.cpp.s  4strip.s  aopt.out  cf2  cf2asm  p1_0_propagate_parent.cpp  p1_1_wait_and_get.cpp  p2_inversion.cpp  p2_linear.cpp  p2_parallel.cpp  plot.py  runtests  stack_22_continuations.cpp  stack_22_continuations.cpp.s  stack_22_strip.s  stack_2_continuations.cpp  stack_2_continuations.cpp.s  stack_2_strip.s  stripasm
resources/css/: main.css  normalize.min.css  utils.css
resources/js/: highlight.pack.js  jquery.animate-colors-min.js  jquery.hoverizr.min.js  main.js
src/: main.cpp
templates/: page.tpl
templates/asides/: text.tpl  textAndPhoto.tpl
templates/base/: main.tpl  mainMenu.tpl
templates/entries/: blog.tpl  footer.tpl  header.tpl  menu.tpl  talk_menu.tpl  talk_text.tpl  text.tpl
templates/other/: disqus.tpl  rss.tpl
(+179 files in other folders)
